array.island.Island.scala.error
Erreur de compilation :
Island:4: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var x:Int
      ^Island:4: error: local variables must be initialized
  var x:Int
      ^Island:5: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
  var i:Int
      ^Island:5: error: local variables must be initialized
  var i:Int
      ^Island:11: error: not found: type i
  island(num:i)
             ^